2002-01-07  Sam Steingold  <sds@gnu.org>

	made problem reporting work with WITH-COMPILATION-UNIT
	* compiler.lisp (c-source-point): new structure (instead of a cons)
	(c-source-location): accept a 3rd optional argument - file,
	defaults to *compile-file-truename*
	(c-source-point): removed the function
	(c-source-point-location): pass all slots of a C-SOURCE-POINT
	to C-SOURCE-LOCATION
	(note-function-used, c-DEFUN): use MAKE-C-SOURCE-POINT
	instead of C-SOURCE-POINT
	(match-known-unknown-functions): bind *COMPILE-FILE-TRUENAME* too

2002-01-07  Sam Steingold  <sds@gnu.org>

	* trace.lisp (fdefinition-local): new function for extracting
	local (LABELS & FLET) functions

2002-01-06  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists) [WIN32_NATIVE]: fixed a bug
	introduced on 2001-08-29 (mind tolerantp!)

2002-01-06  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (note-function-used, c-report-problems): report
	the replacements for the deprecated functions
	* deprecated.lisp (deprecate): new function - use throughout

2002-01-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (RM) [win32]: prepend '-'
	* ffcall/Makefile.msvc: prepend '-' before 'del'
	* ffcall/avcall/Makefile.msvc: ditto
	* ffcall/callback/Makefile.msvc: ditto
	* ffcall/callback/trampoline_r/Makefile.msvc: ditto
	* ffcall/callback/vacall_r/Makefile.msvc: ditto
	* ffcall/trampoline/Makefile.msvc: ditto
	* ffcall/vacall/Makefile.msvc: ditto
	* libiconv/Makefile.msvc: ditto
	* libiconv/lib/Makefile.msvc: ditto
	* libiconv/libcharset/Makefile.msvc: ditto
	* libiconv/libcharset/lib/Makefile.msvc: ditto
	* libiconv/src/Makefile.msvc: ditto
	* libiconv/tests/Makefile.msvc: ditto
	* sigsegv/Makefile.msvc: ditto
	From Indrayana Rustandi <i_rustandi@yahoo.com>

2002-01-06  Sam Steingold  <sds@gnu.org>

	FDEFINITION returns correctly for (SETF symbol) macros
	* control.d (FDEFINITION): check SYS::SETF-EXPANDER property too
	* constsym.d (SYS::SETF-EXPANDER): define the symbol here